set input font size to 16px to avoid zoom on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,7 @@
 h1,h2,h3,h4,h5,h6,p {
   font-family: $font-sans;
 }
+
+body{
+  font-size: $regular-font-size;
+}
