--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -25,7 +25,7 @@ $font-style:          "Monoton",'Montserrat','Source Sans Pro', 'Helvetica', 'Ar
 
 $em-base:             10px;
 $base-font-size:      1.8rem;
-$regular-font-size:   1.5rem;
+$regular-font-size:   1.6rem;
 $small-font-size:     1.2rem;
 $tiny-font-size:      1.1rem;
 $lead-font-size:      2.5rem;
